add mentor status checker handler + ci linter
